src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImage_StringErrorContext.class */
public final class NVDrawVulkanImage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDrawVkImageNV(JIFFFFFFFFF)V", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("nglGetVkProcAddrNV(J)J", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("glGetVkProcAddrNV(Ljava/nio/ByteBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("glGetVkProcAddrNV(Ljava/lang/CharSequence;)J", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("glWaitVkSemaphoreNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("glSignalVkSemaphoreNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        methods.put("glSignalVkFenceNV(J)V", "net/labymod/core/laby3d/opengl/error/generated/NVDrawVulkanImageErrorContext");
        return methods;
    }
}
